# mlx-cv

./: .gitignore  README.md  pyproject.toml
.agent/.automaton/references/: ARTIFACT-LIFECYCLE.md  CONTEXT-BUDGET.md  FRAMEWORK.md  SUBAGENT-PROTOCOL.md
.agent/.automaton/scripts/: get-context.mjs  sync-status.mjs
.agent/.automaton/state/: current.json  install-manifest.json
.agent/steering/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md
.agent/wiki/: LEARNINGS.md  REPO-MAP.md
.agent/work/2026-06-09-spine-contract-proof/: INTAKE.md  PLAN.md  SPEC.md
.agent/work/2026-06-14-build-once-core-blocks/: DESIGN.md  PLAN.md  SPEC.md
.agent/work/2026-06-15-depth-anything-v3-monocular/: DESIGN.md  INTAKE.md  PLAN.md  SPEC.md  claude-eng-review-prompt.md  claude-plan-review-prompt.md
.agent/work/2026-06-15-locateanything-moonvit-backbone/: DESIGN.md  PLAN.md  SPEC.md  claude-eng-review-prompt.md  claude-eng-review-recheck-prompt.md
.agent/work/2026-06-15-locateanything-qwen2-backbone/: DESIGN.md  INTAKE.md  PLAN.md  SPEC.md
.agent/work/2026-06-15-locateanything-vlm-integration/: DESIGN.md  PLAN.md  SPEC.md
.agent/work/2026-06-16-depth-anything-v3-multiview-checkpoint/: DESIGN.md  PLAN.md  SPEC.md  agy-da3-parity-review-prompt.md
.agent/work/2026-06-16-real-checkpoint-bootstrap-rfdetr-nano/: DESIGN.md  INTAKE.md  PLAN.md  SPEC.md
.agent/work/2026-06-16-release-parity-hardening/: PLAN.md  SPEC.md  parity-status.json
.agent/work/2026-06-16-rfdetr-sam31-detection-segmentation/: DESIGN.md  PLAN.md  SPEC.md
.agent/work/2026-06-17-existing-checkpoint-closeout/: DESIGN.md  PLAN.md  SPEC.md
.agent/work/2026-06-17-inference-production-readiness/: PLAN.md  SPEC.md  sam3-video-port-map.md
.agent/work/2026-06-17-next-model-expansion-decision/: CANDIDATE-MATRIX.md  DECISION.md  DESIGN.md  NEXT-CHANGE-BRIEF.md  PLAN.md  SPEC.md  SPINE-IMPACT.md
.agent/work/2026-06-17-sam3-video-object-multiplex/: DESIGN.md  PLAN.md  SPEC.md  sam3-video-contract.md  sam3-video-status.json
.agent/work/2026-06-17-sam3-video-real-checkpoint-admission/: DESIGN.md  PLAN.md  SPEC.md  sam3-video-checkpoint-status.json
.agent/work/2026-06-18-sam3-real-architecture-port/: PLAN.md  SPEC.md
.agent/work/2026-07-18-mlx-cv-003-hugging-face-release/: PLAN.md  SPEC.md
.claude/agents/: automaton-implementer.md  automaton-librarian.md  automaton-quality-reviewer.md  automaton-spec-reviewer.md
.codex/: hooks.json
.codex/agents/: automaton-implementer.toml  automaton-librarian.toml  automaton-quality-reviewer.toml  automaton-spec-reviewer.toml
.codex/skills/auto-eng-review/: SKILL.md
.codex/skills/auto-execute/: SKILL.md
.codex/skills/auto-office-hours/: SKILL.md
.codex/skills/auto-onboard/: SKILL.md
.codex/skills/auto-resume/: SKILL.md
.github/workflows/: test.yml  workflow.yml
.opencode/agents/: automaton-implementer.md  automaton-librarian.md  automaton-quality-reviewer.md  automaton-spec-reviewer.md
.opencode/skills/auto-frame/: SKILL.md
.opencode/skills/auto-plan/: SKILL.md
.opencode/skills/auto-verify/: SKILL.md
docs/: ARCHITECTURE.md  BUILDING-BLOCKS.md  depth-anything-v3.md  huggingface-release.md  sam3-video.md
references/: README.md
src/mlx_cv/: __init__.py
src/mlx_cv/backbones/: __init__.py
src/mlx_cv/core/: __init__.py  base.py  features.py  geometry.py  image.py  registry.py  tracking.py  types.py
src/mlx_cv/heads/: __init__.py
src/mlx_cv/hub/: __init__.py  convert.py  release.py  (+2 more)
tests/: test_convert.py  test_coord.py  test_da3_checkpoint_gate.py  test_da3_convert.py  test_da3_model.py  test_da3_multiview_backbone.py  test_da3_multiview_model.py  test_da3_multiview_processor.py  test_da3_parity.py  test_da3_predict.py  test_da3_processor.py  test_da3_real_architecture_contract.py  test_da3_real_checkpoint_load.py  test_da3_real_forward.py  test_da3_upstream_capture.py  test_da3_upstream_parity.py  test_dinov2_convert.py  test_dinov2_forward.py  test_dinov2_parity.py  test_dinov3_forward.py  test_dinov3_parity.py  test_dpt_convert.py  test_dpt_head.py  test_features.py  test_geometry.py  test_grid_sample.py  test_hub_resolver.py  test_huggingface_release.py  test_la_config.py  test_la_convert.py  test_la_decode.py  test_la_integration_fixture.py  test_la_model.py  test_la_parity.py  test_la_pbd.py  test_la_predict.py  test_la_processor.py  test_la_upstream_parity.py  test_layers.py  test_locateanything_pipeline.py  (+85 more)
tests/fixtures/: da3_monocular_tiny_fixture.npz  da3_monocular_tiny_fixture_weights.npz  dinov2_da3_tiny_fixture.npz  dinov2_da3_tiny_fixture_weights.npz  dinov3_tiny_fixture.npz  dinov3_tiny_fixture_weights.npz  locateanything_bf16_release_baseline.json  locateanything_tiny_fixture.npz  locateanything_tiny_fixture_weights.npz  moonvit_tiny_fixture.npz  moonvit_tiny_fixture_weights.npz  qwen2_tiny_fixture.npz  qwen2_tiny_fixture_weights.npz  rfdetr_tiny_fixture.npz  rfdetr_tiny_fixture_weights.npz  sam3_tiny_fixture_pcs.npz  sam3_tiny_fixture_text.npz  sam3_tiny_fixture_weights.npz
tools/: convert_locateanything_checkpoint.py  convert_sam31_checkpoint.py  da3_checkpoint.py  da3_convert_checkpoint.py  da3_demo.py  da3_real_architecture_contract.py  da3_upstream.py  huggingface_release.py  locateanything_release_regression.py  locateanything_upstream.py  mint_da3_fixture.py  mint_dinov3_fixture.py  mint_locateanything_fixture.py  mint_moonvit_fixture.py  mint_qwen2_fixture.py  mint_rfdetr_fixture.py  mint_sam3_fixture.py  rfdetr_checkpoint.py  rfdetr_convert_checkpoint.py  rfdetr_real_architecture_contract.py  rfdetr_upstream.py  sam31_reference.py  sam3_image_upstream.py  sam3_upstream.py  sam3_video_upstream.py
(+160 files in other folders)
