[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlx-cv"
version = "0.0.1"
description = "MLX-native computer vision for Apple Silicon: object detection, segmentation, and open-vocabulary grounding."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "AppAutomaton", email = "brian@bhoneycutt.com" }]
keywords = [
    "mlx",
    "computer-vision",
    "object-detection",
    "segmentation",
    "open-vocabulary",
    "apple-silicon",
    "sam",
    "locate-anything",
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/appautomaton/mlx-cv"
Repository = "https://github.com/appautomaton/mlx-cv"
Issues = "https://github.com/appautomaton/mlx-cv/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mlx_cv"]
