[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlx-cv"
version = "0.0.2"
description = "MLX-native computer vision for Apple Silicon: object detection, segmentation, and open-vocabulary grounding."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "AppAutomaton", email = "brian@bhoneycutt.com" }]
keywords = [
    "mlx",
    "computer-vision",
    "object-detection",
    "segmentation",
    "open-vocabulary",
    "apple-silicon",
    "sam",
    "locate-anything",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.21",
    "pillow>=9.0",
]

[project.optional-dependencies]
# Run models on Apple Silicon. mlx loads/saves safetensors natively (mx.load / mx.save_safetensors),
# so no separate `safetensors` package is needed.
mlx = ["mlx>=0.18"]
# Optional: auto-download weights via from_pretrained. Otherwise weights are user-fetched (§14) and
# loaded from a local path with mx.load — needing no extra deps.
hub = ["huggingface_hub>=0.20"]
test = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/appautomaton/mlx-cv"
Repository = "https://github.com/appautomaton/mlx-cv"
Issues = "https://github.com/appautomaton/mlx-cv/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mlx_cv"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
