[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlx-cv"
version = "0.0.3"
description = "MLX-native computer vision for Apple Silicon: object detection, segmentation, and open-vocabulary grounding."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "AppAutomaton", email = "brian@bhoneycutt.com" }]
keywords = [
    "mlx",
    "computer-vision",
    "object-detection",
    "segmentation",
    "open-vocabulary",
    "apple-silicon",
    "sam",
    "locate-anything",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.21",
    "pillow>=9.0",
]

[project.optional-dependencies]
# Run models on Apple Silicon. mlx loads/saves safetensors natively (mx.load / mx.save_safetensors),
# so no separate `safetensors` package is needed.
mlx = ["mlx>=0.18"]
# Optional: auto-download weights via from_pretrained. Otherwise weights are user-fetched (§14) and
# loaded from a local path with mx.load — needing no extra deps.
hub = [
    "huggingface_hub>=0.20",
    "tokenizers>=0.20",
]
release = [
    "build>=1.2",
    "twine>=6.0",
]
test = [
    "pytest>=7.0",
]
da3-reference = [
    "addict>=2.4",
    "einops>=0.7",
    "huggingface_hub>=0.20",
    "imageio>=2.30",
    "omegaconf>=2.3",
    "opencv-python>=4.8",
    "safetensors>=0.4",
    "torch>=2",
    "torchvision>=0.17",
]

[project.urls]
Homepage = "https://github.com/appautomaton/mlx-cv"
Repository = "https://github.com/appautomaton/mlx-cv"
Issues = "https://github.com/appautomaton/mlx-cv/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mlx_cv"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
